--- a/mobile/FridgyNote/app/src/main/res/layout/activity_new_tag.xml
+++ b/mobile/FridgyNote/app/src/main/res/layout/activity_new_tag.xml
@@ -38,7 +38,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
     <EditText
-        android:id="@+id/editText"
+        android:id="@+id/tag_title_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:ems="10"
@@ -78,7 +78,7 @@
         android:layout_marginTop="8dp"
         android:entries="@array/tag_types"
         app:layout_constraintStart_toEndOf="@+id/textView5"
-        app:layout_constraintTop_toBottomOf="@+id/editText" />
+        app:layout_constraintTop_toBottomOf="@+id/tag_title_text" />
 
     <TextView
         android:id="@+id/select_list_text"
