--- a/mobile/FridgyNote/app/src/main/res/layout/activity_main.xml
+++ b/mobile/FridgyNote/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.bitsplease.fridgynote.MainActivity">
+    tools:context="com.bitsplease.fridgynote.activities.MainActivity">
 
     <TextView
         android:id="@+id/message"
