Improved shared users UI

--- a/mobile/FridgyNote/app/src/main/res/layout/activity_text_note.xml
+++ b/mobile/FridgyNote/app/src/main/res/layout/activity_text_note.xml
@@ -68,6 +68,7 @@
                 android:orientation="horizontal">
 
                 <LinearLayout
+                    android:id="@+id/share_user_1_parent"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:layout_marginRight="6dp"
@@ -92,6 +93,7 @@
                 </LinearLayout>
 
                 <LinearLayout
+                    android:id="@+id/share_user_2_parent"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:layout_marginRight="6dp"
@@ -116,6 +118,7 @@
                 </LinearLayout>
 
                 <LinearLayout
+                    android:id="@+id/share_user_3_parent"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:layout_marginRight="6dp"
@@ -140,6 +143,7 @@
                 </LinearLayout>
 
                 <LinearLayout
+                    android:id="@+id/share_user_4_parent"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:layout_marginRight="6dp"
@@ -164,6 +168,7 @@
                 </LinearLayout>
 
                 <LinearLayout
+                    android:id="@+id/share_user_5_parent"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:layout_marginRight="6dp"
