--- a/mobile/FridgyNote/app/src/main/res/layout/activity_list_note.xml
+++ b/mobile/FridgyNote/app/src/main/res/layout/activity_list_note.xml
@@ -61,13 +61,16 @@
                 </android.support.constraint.ConstraintLayout>
             </LinearLayout>
 
+
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_marginTop="20dp"
+                android:layout_marginTop="16dp"
                 android:orientation="horizontal">
 
                 <LinearLayout
+                    android:id="@+id/share_user_1_parent"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:layout_marginRight="6dp"
@@ -92,6 +95,7 @@
                 </LinearLayout>
 
                 <LinearLayout
+                    android:id="@+id/share_user_2_parent"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:layout_marginRight="6dp"
@@ -116,6 +120,7 @@
                 </LinearLayout>
 
                 <LinearLayout
+                    android:id="@+id/share_user_3_parent"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:layout_marginRight="6dp"
@@ -140,6 +145,7 @@
                 </LinearLayout>
 
                 <LinearLayout
+                    android:id="@+id/share_user_4_parent"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:layout_marginRight="6dp"
@@ -164,6 +170,7 @@
                 </LinearLayout>
 
                 <LinearLayout
+                    android:id="@+id/share_user_5_parent"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:layout_marginRight="6dp"
