--- a/mobile/FridgyNote/app/src/main/res/layout/activity_text_note.xml
+++ b/mobile/FridgyNote/app/src/main/res/layout/activity_text_note.xml
@@ -197,7 +197,7 @@
                     android:layout_height="match_parent">
 
                     <Button
-                        android:id="@+id/button"
+                        android:id="@+id/share_button"
                         android:layout_width="90dp"
                         android:layout_height="37dp"
                         android:layout_marginEnd="8dp"
