--- a/mobile/FridgyNote/app/src/main/res/layout/note_group_row.xml
+++ b/mobile/FridgyNote/app/src/main/res/layout/note_group_row.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content" >
+    android:layout_height="wrap_content">
 
     <ImageView
         android:id="@+id/icon_note"
@@ -11,16 +12,17 @@
         android:layout_marginLeft="10dp"
         android:layout_marginRight="20dp"
         android:layout_marginTop="4px"
-        android:clickable="true"
         android:longClickable="true"
         android:src="@drawable/note_icon"
-        app:srcCompat="@android:color/darker_gray"></ImageView>
+        app:srcCompat="@android:color/darker_gray"
+        ></ImageView>
 
     <TextView
         android:id="@+id/label_note"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="50px"
-        android:layout_marginTop="15dp"></TextView>
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="15dp"
+        android:textSize="50px"></TextView>
+
 
 </LinearLayout>
