--- a/mobile/FridgyNote/app/src/main/res/layout/activity_tag_notes.xml
+++ b/mobile/FridgyNote/app/src/main/res/layout/activity_tag_notes.xml
@@ -24,7 +24,7 @@
             <android.support.v7.widget.CardView
                 android:id="@+id/card1"
                 android:layout_width="match_parent"
-                android:layout_height="0dp"
+                android:layout_height="wrap_content"
                 android:layout_margin="5dp"
                 android:layout_weight="1"
                 android:minHeight="70dp"
@@ -43,12 +43,12 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_weight="4"
-                        android:text="TextView" />
+                        android:text="wfsdadsaadsadsads" />
 
                     <ImageView
                         android:id="@+id/imageView4"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
                         android:layout_weight="1"
                         android:minHeight="70dp"
                         app:srcCompat="@drawable/note_icon" />
