--- a/mobile/FridgyNote/app/src/main/res/layout/notes_group_fragment_layout.xml
+++ b/mobile/FridgyNote/app/src/main/res/layout/notes_group_fragment_layout.xml
@@ -2,9 +2,8 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="match_parent"
-    android:background="#7bae16"
-    android:orientation="vertical"
-    android:layout_marginBottom="?attr/actionBarSize">
+    android:layout_marginBottom="?attr/actionBarSize"
+    android:orientation="vertical">
 
     <ListView
         android:id="@+id/notes_groups"
