--- a/mobile/FridgyNote/app/src/main/res/layout/memo_fragment_layout.xml
+++ b/mobile/FridgyNote/app/src/main/res/layout/memo_fragment_layout.xml
@@ -2,6 +2,11 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="match_parent"
-    android:background="#f4d804"
-    android:orientation="vertical"
-    android:layout_marginBottom="?attr/actionBarSize"/>
+    android:layout_marginBottom="?attr/actionBarSize"
+    android:orientation="vertical">
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recycler_reminder_list"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+</FrameLayout>
