--- a/mobile/FridgyNote/app/src/main/res/layout/activity_tag_notes.xml
+++ b/mobile/FridgyNote/app/src/main/res/layout/activity_tag_notes.xml
@@ -43,12 +43,12 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_weight="4"
-                        android:text="wfsdadsaadsadsads" />
+                        android:text="TextView" />
 
                     <ImageView
                         android:id="@+id/imageView4"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:minHeight="70dp"
                         app:srcCompat="@drawable/note_icon" />
@@ -59,7 +59,7 @@
             <android.support.v7.widget.CardView
                 android:id="@+id/card2"
                 android:layout_width="match_parent"
-                android:layout_height="0dp"
+                android:layout_height="wrap_content"
                 android:layout_margin="5dp"
                 android:layout_weight="1"
                 android:minHeight="70dp"
@@ -94,10 +94,10 @@
             <android.support.v7.widget.CardView
                 android:id="@+id/card3"
                 android:layout_width="match_parent"
-                android:layout_height="0dp"
+                android:layout_height="wrap_content"
                 android:layout_margin="5dp"
-                android:minHeight="70dp"
                 android:layout_weight="1"
+                android:minHeight="70dp"
                 android:visibility="gone"
                 tools:showIn="@layout/activity_tag_notes">
 
@@ -129,10 +129,10 @@
             <android.support.v7.widget.CardView
                 android:id="@+id/card4"
                 android:layout_width="match_parent"
-                android:layout_height="0dp"
+                android:layout_height="wrap_content"
                 android:layout_margin="5dp"
-                android:minHeight="70dp"
                 android:layout_weight="1"
+                android:minHeight="70dp"
                 android:visibility="gone"
                 tools:showIn="@layout/activity_tag_notes">
 
@@ -164,7 +164,7 @@
             <android.support.v7.widget.CardView
                 android:id="@+id/card5"
                 android:layout_width="match_parent"
-                android:layout_height="0dp"
+                android:layout_height="wrap_content"
                 android:layout_margin="5dp"
                 android:layout_weight="1"
                 android:minHeight="70dp"
@@ -201,7 +201,7 @@
             <android.support.v7.widget.CardView
                 android:id="@+id/card6"
                 android:layout_width="match_parent"
-                android:layout_height="0dp"
+                android:layout_height="wrap_content"
                 android:layout_margin="5dp"
                 android:layout_weight="1"
                 android:minHeight="70dp"
