--- a/mobile/FridgyNote/app/src/main/res/layout/activity_text_note.xml
+++ b/mobile/FridgyNote/app/src/main/res/layout/activity_text_note.xml
@@ -7,6 +7,7 @@
     tools:context="com.bitsplease.fridgynote.activities.TextNoteActivity">
 
     <ScrollView
+        android:id="@+id/text_note_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
