--- a/mobile/FridgyNote/app/src/main/res/layout/activity_text_note.xml
+++ b/mobile/FridgyNote/app/src/main/res/layout/activity_text_note.xml
@@ -88,6 +88,7 @@
                             android:layout_marginLeft="16dp"
                             android:layout_marginTop="10dp"
                             android:text="L"
+                            android:textAlignment="viewStart"
                             android:textColor="@android:color/white"
                             android:textStyle="bold" />
                     </LinearLayout>
@@ -212,7 +213,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
-                android:visibility="gone"
+                android:visibility="visible"
                 tools:layout_editor_absoluteX="8dp"
                 tools:layout_editor_absoluteY="243dp" />
 
