Fix group fragment

--- a/mobile/FridgyNote/app/src/main/res/layout/note_group_row.xml
+++ b/mobile/FridgyNote/app/src/main/res/layout/note_group_row.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
     <ImageView
@@ -14,8 +14,7 @@
         android:layout_marginTop="4px"
         android:longClickable="true"
         android:src="@drawable/note_icon"
-        app:srcCompat="@android:color/darker_gray"
-        ></ImageView>
+        app:srcCompat="@android:color/darker_gray"></ImageView>
 
     <TextView
         android:id="@+id/label_note"
