--- a/mobile/FridgyNote/app/src/main/res/menu/navigation.xml
+++ b/mobile/FridgyNote/app/src/main/res/menu/navigation.xml
@@ -3,12 +3,12 @@
 
     <item
         android:id="@+id/navigation_home"
-        android:icon="@drawable/ic_home_black_24dp"
+        android:icon="@android:drawable/ic_input_get"
         android:title="@string/title_home" />
 
     <item
         android:id="@+id/navigation_dashboard"
-        android:icon="@drawable/ic_dashboard_black_24dp"
+        android:icon="@drawable/ic_shopping"
         android:title="@string/title_shopping_item" />
 
     <item
